<resources>
    <string name="app_name">BVPIEEE</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_events">Events</string>
    <string name="title_team">Team</string>
    <string name="title_activity_chapter">ChapterActivity</string>
    <string name="tab_text_1">RAS</string>
    <string name="tab_text_2">IAS</string>
    <string name="tab_text_3">CS</string>
    <string name="tab_text_4">WIE</string>
    <string name="tab_text_5">HKN</string>
    <string name="tab_text_6">CODE-X</string>
    <string name="tab_text_7">DRISHTI</string>
    <string name="tab_text_8">RAU</string>
    <string name="tab_text_9">BVCOE QUIZ CLUB</string>
    <string name="tab_text_10">E-CELL</string>
    <string name="tab_text_11">GAMMA</string>
    <string name="team_tab_core">CORE TEAMS</string>
    <string name="team_tab_chaps">CHAPTER TEAMS</string>
    <string name="team_tab_sig">SIG TEAM</string>
    <string name="team_tab_auxi">AUXILLARY TEAM</string>
    <string name="bvpieee_image">Bvpieee image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lottieanimation">LottieAnimation</string>
    <string name="social_media_handles">Social Media Handles</string>
    <string name="background">Background</string>
    <string name="about">About</string>
    <string name="eventworkshop">Events and Workshops</string>
    <string name="team">Team</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vel eros nulla. Pellentesque id turpis a turpis molestie hendrerit eu non libero. Morbi eget sodales est. Ut ultrices, tortor sed commodo aliquam, lorem nisi consectetur turpis, euismod venenatis elit nisl ac mauris. Nam ut imperdiet lorem. Nulla id fringilla tellus, eu tincidunt sapien</string>
    <string name="core_team_member_image">Core Team Member Image</string>
    <string name="name">NAME</string>
    <string name="post">POST</string>
    <string name="tap_to_know_more">Tap to know more</string>
    <string name="special_interest_groups_sigs">Special Interest Groups (SIGs), BVPIEEE</string>
    <string name="auxillary_team_bvpieee">Auxillary Team, BVPIEEE</string>
    <string name="chapters">Chapters</string>
    <string-array name="chapter_description">
        <item>The Robotics and Automation Society is a professional society that supports the development and the exchange of scientific knowledge in the fields of robotics and automation, including applied and theoretical issues. The RAS chapter was founded in 2014 by Shivam Bhardwaj . Over the years, it has organized several competitions like Robo Soccor, Robotic Guardians of the Galaxy, Robotic Mazes, Arcades, Robo Rugby etc. which saw an overwhelming participation. It has fostered students for inspiring them to pursue further studies in robotics and related fields from top universities like New York University, and carved students who were winning faces of several national and international competitions like eYantra and Celestini.</item>
        <item>BVPIEEE Computer Society is a professional society of IEEE. Its purpose and scope is “to advance the theory, practice, and application of computer and information processing science and technology” and the “professional standing of its members. As they say, computer and technology go hand in hand with development, this chapter aims to provide opportunities in the fields of research for new technologies like cloud storage, big data and artificial intelligence. The true focus is to harness the curiosity of the budding engineers and steer their way towards a more research and experiment based environment. Various hackathons and coding competitions are also organised by this chapter.</item>
        <item>IAS enriches both its individual members and the industry as a whole through the sharing of specific industry-related solutions. The scope of the Industry Applications Society is the advancement of the theory and practice of electrical and electronic engineering in the development, design, manufacture &amp; application of electrical systems, apparatus, devices &amp; controls to the processes and equipment of industry &amp; commerce; the promotion of safe, reliable and economic installations; industry leadership in energy conservation and environmental, health, and safety issues; the creation of voluntary engineering standards and recommended practices, and the professional development of its membership.</item>
        <item>BVPIEEE Women in Engineering (WIE) is a professional organization dedicated to promoting women engineers and scientists, and inspiring girls around the world to follow their academic interests in a career in engineering.The goal is to facilitate the recruitment and retention of women in technical disciplines globally. We envision a vibrant community of IEEE women and men collectively using their diverse talents to innovate for the benefit of humanity. It’s aim is to mentor young women in junior and high schools and make them interested in the fields of science and technology and to increase networking among young women who are studying engineering.</item>
        <item>BVPIEEE-Eta Kappa Nu (IEEE-HKN) is the student honor society of BVPIEEE and is dedicated to encouraging and recognizing excellence in the IEEE-designated fields of interest. These include: Engineering, Computer Science and Information Technology, Physical Sciences, Biological and Medical Sciences, Mathematics, Technical Communications, Education, Management, Law and Policy. The society, through a variety of service programs and leadership training, ensures that the student members develop lifelong skills that earmark them for prominent positions in industry and academia. It publishes two yearly magazines, Pratibinbh and Cogzniance. Also, it gives awards to the students who score well on academic front.</item>
    </string-array>
    <string-array name="sig_description">
        <item>Code-X is a Special Interest Group for programming, under BVPIEEE. It aims at improving programming standards by lessening the gap between the learned ones and the beginners. It also holds workshops, weekly quiz/challenges, tutorial sessions, and offline programming competitions on a regular basis keeping the level as comfortable as possible for both, tyros and pro-coders.</item>
        <item>Drishti is the digital arts association of BVPIEEE that works to promote and encourage Digital Arts amongst the students. Drishti conducts various events from photography-oriented sessions to photoshop-based software workshops and tutorials, giving interested students a view of the latest technology and updates in the domain of digital arts.</item>
        <item>RAU, a Student Interest Group under BVPIEEE is an entity which aims to provide students with the field knowledge about Robotics and Automation. The SIG focuses more on project-based learning in addition to preparing the students to face the hurdles which usually come while implementing the algorithms. Being one of the most active parts of BVPIEEE, the SIG continuously work in projects along with students across all domains. The projects include ROS, quadcopter dynamics, balance bot and projects on Raspberry Pi &amp; Arduino, which are the most popular prototyping boards among the budding engineers.</item>
        <item>The BVCOE Quiz Club(BQC) aims to keep alive the long-standing tradition of quizzing at Bharati Vidyapeeth’s College of Engineering. A BVPIEEE initiative and one of its six SIGs (Special Interest Groups), it holds meetings throughout the academic session where quiz enthusiasts meet and compete with each other. Seeing that one of the premier events of BVPIEEE is a quiz, namely Dr. Vikram Sarabhai Quiz, BQC has always been an integral part of not just BVPIEEE but also of the college as it has established a culture of quizzing and knowledge sharing.</item>
        <item>E-Cell (Entrepreneurship Cell) aims at providing a platform for students to interact with professionals and industrialists from different fields. E-Cell organizes Group Discussions, Conferences, and many more Interactive sessions and helps in developing a Professional environment for students. Its aim is to help the budding engineers of the institution to realize their dreams of establishing their own start-ups, aiding them in conceptualizing and executing their plans by conducting one to one interaction with entrepreneurs and field experts.</item>
        <item>BVPIEEE added a vertex to its graph in the form of GAMMA which stands for Gaming and Multimedia Animation by organizing its orientation meeting on 5th March 2014. This SIG of BVPIEEE is a new dimension which encapsulates not only gaming but all the hard work that it takes to build a game. It not only wants the students to have fun while playing games but also learn the game.</item>
    </string-array>
    <string name="dummyText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mi quis hendrerit dolor magna eget est lorem ipsum. Phasellus egestas tellus rutrum tellus pellentesque eu tincidunt tortor aliquam. Faucibus ornare suspendisse sed nisi lacus sed viverra. At in tellus integer feugiat scelerisque varius morbi enim. Morbi tincidunt augue interdum velit euismod in pellentesque. Sed odio morbi quis commodo odio aenean. Magnis dis parturient montes nascetur ridiculus mus. In fermentum et sollicitudin ac orci. Quis varius quam quisque id. Dis parturient montes nascetur ridiculus mus. Ut eu sem integer vitae justo eget.

Dictum at tempor commodo ullamcorper a lacus. Orci dapibus ultrices in iaculis. Ut placerat orci nulla pellentesque dignissim enim sit amet. Turpis egestas pretium aenean pharetra magna ac. Eu lobortis elementum nibh tellus molestie. Tristique nulla aliquet enim tortor at auctor urna nunc. Elementum tempus egestas sed sed risus pretium. Massa enim nec dui nunc. Egestas integer eget aliquet nibh praesent tristique magna. Fames ac turpis egestas maecenas. Velit scelerisque in dictum non.
    </string>
    <string name="btnMarkGoing">MARK GOING</string>
    <string name="chapter_name">Chapter Name</string>
    <string name="chapter_full_form">Chapter Full Form</string>
    <string name="chapter_image">Chapter Image</string>
    <string name="member_name">Member name</string>
    <string name="member_info">Member Info</string>
    <string name="robotics_and_automation_society">Robotics and Automation Society</string>
    <string name="computer_society">Computer Society</string>
    <string name="industrial_automation_society">Industrial Automation Society</string>
    <string name="hkn_lambda_eta_chapter">HKN Lambda ETA Chapter</string>
    <string name="women_in_engineering">Women In Engineering</string>
</resources>